Update Web Price Quote Sources

Some sources were added, some removed (no longer work and cannot be made
to work), and some updated.

BUG:381399
FIXED-IN:5.0

Differential Revision: https://phabricator.kde.org/D6224

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>